fix foont spacing on static_pages.css

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -11,9 +11,7 @@ html {
 	  background-size: cover;
 	background-color: transparent;
 }
-ul, li, p, a {
-	font-family: 'OpenSans';
-}
+
 .navbar-default .navbar-nav li{
 	a {
 		font-weight: 600;
